# trinket_car_open

./: CMakeLists.txt  README.md
project/include/: chat_manage.h  crypto.h
project/keys/: rsa.private  rsa.public
project/src/: chat_manage.cpp  crypto.cpp  main.cpp
